# cofiswarm-observer-sdk

./: Makefile  README.md  go.mod  go.sum
examples/: sink-agent-logs.yaml
pkg/buspresence/: buspresence.go  buspresence_test.go  zmqpub.go  zmqpub_test.go
pkg/contract/: contract.go  contract_test.go
pkg/servicecomponent/: servicecomponent.go  servicecomponent_test.go
python/: pyproject.toml
python/cofiswarm_observer/: __init__.py  contract.py  servicecomponent.py
python/tests/: test_contract.py
spec/: log-format.md
test/scripts/: test-gate.sh
