[project]
name = "cofiswarm-observer-sdk"
version = "1.2.0"
description = "cofiswarm observer bus client (Python) — NATS service component + wire contract"
requires-python = ">=3.10"
dependencies = ["nats-py>=2.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cofiswarm_observer*"]
